<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/user_item">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_userItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="18dp"
        app:cardCornerRadius="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:layout_marginTop="12.5dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="12.5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imAvatar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/place4" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vela_sans_bold"
                    android:gravity="start"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/tvRatePlace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/vela_sans_bold"
                        android:text="4"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/place"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vela_sans_bold"
                    android:gravity="end"
                    android:text="@string/steps"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vela_sans_bold"
                    android:gravity="end"
                    android:text="@string/step"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>